--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 ENV="development"
 SECRET="secret"
 DB_TYPE="postgres"
+POSTGRES_HOST="postgres"
+POSTGRES_PORT="5432"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="password"
+POSTGRES_DB="simple_api"
+MONGODB_URI="mongodb://localhost:27017/simple_api"
