--- a/.env
+++ b/.env
@@ -1,9 +1,13 @@
 ENV="development"
-SECRET="secret"
-DB_TYPE="postgres"
-POSTGRES_HOST="postgres"
+SECRET="secret" # secret key for jwt token, this is just an example, you should use a strong secret key
+DB_TYPE="mongodb" # postgres or mongodb
+POSTGRES_HOST="localhost"
 POSTGRES_PORT="5432"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 POSTGRES_DB="simple_api"
-MONGODB_URI="mongodb://localhost:27017/simple_api"
+MONGO_HOST="mongodb://localhost"
+MONGO_PORT="27017"
+MONGO_USER="mongo"
+MONGO_PASSWORD="password"
+MONGO_DB="admin"
