--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build: .
@@ -8,16 +6,20 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      mongodb:
-        condition: service_healthy
 
     environment:
+      - SECRET=secret
+      - DB_TYPE=postgres
       - POSTGRES_HOST=postgres
       - POSTGRES_PORT=5432
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=simple_api
-      - MONGODB_URI=mongodb://mongodb:27017/simple_api
+      - MONGO_HOST=localhost
+      - MONGO_PORT=27017
+      - MONGO_USER=mongo
+      - MONGO_PASSWORD=password
+      - MONGO_DB=admin
 
   postgres:
     image: postgres:15
@@ -36,21 +38,19 @@ services:
       start_period: 30s
 
   mongodb:
-    image: mongo:6
-    restart: always
+    image: mongodb/mongodb-community-server:6.0-ubi8
+    container_name: mongodb
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: admin
     ports:
       - "27017:27017"
-    healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.runCommand('ping').ok"]
-      interval: 10s
-      retries: 5
-      start_period: 30s
     volumes:
       - mongo-data:/data/db
 
 volumes:
   pgdata:
   mongo-data:
+    name: mongo-data
+
