--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,27 +6,15 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-
-    environment:
-      - SECRET=secret
-      - DB_TYPE=postgres
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=simple_api
-      - MONGO_HOST=localhost
-      - MONGO_PORT=27017
-      - MONGO_USER=mongo
-      - MONGO_PASSWORD=password
-      - MONGO_DB=admin
+    env_file:
+      - .env
 
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: simple_api
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
@@ -41,9 +29,9 @@ services:
     image: mongodb/mongodb-community-server:6.0-ubi8
     container_name: mongodb
     environment:
-      MONGO_INITDB_ROOT_USERNAME: mongo
-      MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: admin
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER} 
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DB}
     ports:
       - "27017:27017"
     volumes:
