--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ENV=development
 SECRET=secret
-DB_TYPE=mongodb
-POSTGRES_HOST=localhost
+DB_TYPE=postgres
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
